# stark-perpetual

./: CMakeLists.txt  CMakeLists_common.txt  Dockerfile  LICENSE  README.md  WORKSPACE  load_cairo_lang.bzl  package.json  vars.bzl
bazel_utils/: BUILD  get_from_cairo_lang.bzl  python.bzl
bazel_utils/patches/: mdbx_sys.patch  rules_rust.patch
bazel_utils/python/: stub.sh.tpl
licenses/: ApacheLicense.txt
scripts/: requirements-deps.json  requirements-gen.txt  requirements.txt
src/cmake_utils/: gen_py_lib.py  gen_solidity_env.py  gen_venv.py  pip_rules.cmake
src/services/: CMakeLists.txt
src/services/exchange/: CMakeLists.txt  extract_cairo_hash.py
src/services/exchange/cairo/: BUILD  CMakeLists.txt  order.cairo  signature_message_hashes.cairo
src/services/exchange/cairo/definitions/: BUILD  CMakeLists.txt  constants.cairo
src/services/perpetual/: CMakeLists.txt
src/services/perpetual/cairo/: BUILD  CMakeLists.txt  execute_batch.cairo  execute_batch_utils.cairo  main.cairo  program_hash.json  program_hash_test.py
src/services/perpetual/public/: BUILD  CMakeLists.txt  generate_perpetual_config_hash.py  perpetual_messages.py  perpetual_messages_precomputed.json  perpetual_messages_test.py  public_generate_perpetual_config_hash.py  stark_cli.py  stark_cli_test.py  vars.bzl
src/starkware/: CMakeLists.txt
src/starkware/cairo/: CMakeLists.txt  vars_cairo_compiler.bzl
src/starkware/cairo/bootloaders/: BUILD  (+1 more)
src/starkware/python/: BUILD  CMakeLists.txt  CMakeLists_common.txt  random_test.py  utils.py  utils_test.py
tools/: bazel  user_csr.conf
(+139 files in other folders)
